--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <title>Team Metal Pipe</title>
 </head>
-<body class="bg-gradient-to-r from-fuchsia-400 to-fuchsia-400 via-fuchsia-200">
+<body class="bg-gradient-to-r from-bg-side to-bg-side via-bg-center">
     <div data-scroll-container>
         <div id="nav-bar" class="z-50 fixed"></div>
 
@@ -165,18 +165,19 @@
         </section>
 
         <section id="footer" data-scroll-section>
-            <span class="z-[1] grid grid-cols-12 w-screen">
+            <span class="z-[1] grid grid-cols-13 w-screen bg-slate-50">
                 <div></div>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">M</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">E</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">T</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">A</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">L</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50"> </p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">P</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">I</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">P</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">E</p>
+                <div class="flex justify-center items-center"><img src="../src/icons/png/birdFull.png" class="h-32 w-32"></div>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">M</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">E</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">T</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">A</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">L</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main"> </p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">P</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">I</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">P</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">E</p>
                 <div></div>
             </span>
         </section>
