--- a/src/index.html
+++ b/src/index.html
@@ -50,19 +50,19 @@
             <div class="absolute w-screen h-1 bg-fuchsia-950"></div>
 
             <div class="h-nav"></div>
-            <span class="z-[1] grid grid-cols-13 w-screen">
+            <span class="z-[1] grid grid-cols-13 w-screen text-center text-9xl font-[1000] font-mono text-slate-50">
                 <div></div>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">I</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">O</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">V</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">A</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">T</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">I</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">O</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">.</p>
+                <p>I</p>
+                <p>N</p>
+                <p>N</p>
+                <p>O</p>
+                <p>V</p>
+                <p>A</p>
+                <p>T</p>
+                <p>I</p>
+                <p>O</p>
+                <p>N</p>
+                <p>.</p>
                 <div></div>
             </span>
             <div class="relative h-auto z-10">
@@ -165,19 +165,19 @@
         </section>
 
         <section id="footer" data-scroll-section>
-            <span class="z-[1] grid grid-cols-13 w-screen bg-slate-50">
+            <span class="z-[1] grid grid-cols-13 w-screen bg-slate-50 text-center text-9xl font-[1000] font-mono text-footer-main">
                 <div></div>
                 <div class="flex justify-center items-center"><img src="../src/icons/png/birdFull.png" class="h-32 w-32"></div>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">M</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">E</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">T</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">A</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">L</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main"> </p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">P</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">I</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">P</p>
-                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-footer-main">E</p>
+                <p>M</p>
+                <p>E</p>
+                <p>T</p>
+                <p>A</p>
+                <p>L</p>
+                <p> </p>
+                <p>P</p>
+                <p>I</p>
+                <p>P</p>
+                <p>E</p>
                 <div></div>
             </span>
         </section>
