--- a/src/donations.html
+++ b/src/donations.html
@@ -65,11 +65,10 @@
                     </div>
                     <div class="h-nav"></div>
                     <div class="h-nav"></div>
-                    <div class="h-nav"></div>
                     <!-- how to donate -->
                     <div class="translate-x-[16.666%]">
                         <div class="flex justify-end items-start z-10">
-                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-slate-50">CONTRIBUTE</p>
+                            <p class="z-10 absolute tracking-widest text-7xl font-mono text-slate-50">FINANCES</p>
                             <div class="relative z-0 w-full h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/70 via-fuchsia-500/70 inset-x-20"></div>
                         </div>
                         <div class="h-[30.6px]"></div> <!-- account for highlight translation :skull: (68% * 45px, which is height of highlight) -->
@@ -77,7 +76,11 @@
                         <div class="flex justify-end items-center">
                             <div class="grid grid-cols-20 w-5/6"> <!-- only slightly scuffed -->
                                 <p class="col-span-19 tracking-wide font-mono text-stone-200 text-2xl text-right">
-                                    We are fiscally sponsored and banked with <a href="https://hackclub.com/bank/" class="underline text-white decoration-fuchsia-600 font-semibold">Hack Club Bank</a>. Loreum ipsum yadda yadda yadda idk here is some padding to simulate what i think the actual length would roughly be
+                                    We are fiscally sponsored by <a href="https://hackclub.com/" class="underline text-white decoration-sky-500 font-semibold">The Hack Foundation</a>, providing our team&nbsp;<!--
+                                --><span class="relative"><!--
+                                    --><span class="block absolute -inset-1 -skew-y-1 bg-gradient-to-r from-orange-500/70 to-red-500/70"></span><!--
+                                    --><span class="relative font-black">nonprofit&nbsp;501(3)c</span><!--
+                                --></span> status. All donations are tax deductible. Contributions are routed through the <a href="https://hackclub.com/bank/" class="underline text-white decoration-sky-500 font-semibold">Hack Club Bank</a> in order to ensure the safety and security of all transactions.
                                 </p>
                                 <div class="col-span-1 flex justify-end items-center">
                                     <div class="z-10 h-full w-1 bg-purple-600"></div>
@@ -93,8 +96,8 @@
             <!-- donate button -->
             <a href="https://bank.hackclub.com/donations/start/teammetalpipe">
                 <div class="flex justify-center items-start">
-                    <p class="z-10 text-7xl font-mono text-slate-50 tracking-widest absolute">DONATE HERE</p>
-                    <div class="relative z-0 w-3/5 h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/5 via-fuchsia-500/50 to-purple-600/5 animate-pulse-slow"></div>
+                    <p class="z-10 text-7xl font-mono text-slate-50 tracking-widest absolute underline decoration-sky-500 underline-offset-[5px]">DONATE HERE</p>
+                    <div class="relative z-0 w-3/5 h-[45px] translate-y-[30.6px] bg-gradient-to-r from-purple-600/5 via-fuchsia-500/80 to-purple-600/5 animate-pulse-slow"></div>
                 </div>
             </a>
 
