--- a/src/donations.html
+++ b/src/donations.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 
-  <link href="../dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
 
-  <title>Team Metal Pipe | Donations</title>
+    <title>Team Metal Pipe | Donations</title>
+    <link rel="SHORTCUT ICON" href="../src/favicon.ico"/>
+    <link rel="icon" href="../src/favicon.ico" type="image/ico"/>
 </head>
 <body class="bg-bg-center">
     <div data-scroll-container>
         <div id="nav-bar" class="z-50 fixed"></div>
 
         <div class="h-full w-full overflow-hidden fixed">
-                <div class="-z-20 absolute bg-home-1 bg-no-repeat bg-cover bg-center bg-fixed w-screen h-screen"></div>
-                <div class="-z-10 bg-fixed absolute w-screen h-screen bg-stone-800/70 backdrop-blur-[4px]"></div>
-            </div>
+            <div class="-z-20 absolute bg-[url('../src/images/donationsBg.jpg')] bg-no-repeat bg-cover bg-center bg-fixed w-screen h-screen"></div>
+            <div class="-z-10 bg-fixed absolute w-screen h-screen bg-stone-800/70 backdrop-blur-[4px]"></div>
+        </div>
 
         <section id="main" data-scroll-section>
             <div class="h-nav"></div>
