--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 
-  <link href="../dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
 
-  <title>Team Metal Pipe</title>
+    <title>Team Metal Pipe</title>
+    <link rel="SHORTCUT ICON" href="../src/favicon.ico"/>
+    <link rel="icon" href="../src/favicon.ico" type="image/ico"/>
 </head>
 <body class="bg-gradient-to-r from-bg-side to-bg-side via-bg-center">
     <div data-scroll-container>
