--- a/src/about.html
+++ b/src/about.html
@@ -40,22 +40,41 @@
 
             <div class="flex place-content-center w-full">
                 <div class="flex place-content-center w-[64rem] h-[30rem]">
-                    <div class="embla w-full h-full">
-                        <div class="embla__viewport overflow-hidden h-full">
+                    <div class="embla w-full h-full relative">
+                        <div class="embla__viewport overflow-hidden h-full absolute">
                             <div class="embla__container flex h-full">
                                 <div class="flex-100 min-w-0 relative">
-                                    <img class="block w-full h-full object-cover" src="../src/images/aboutCarousel/1.jpg"/>
+                                    <img class="block w-full h-full object-cover absolute" src="../src/images/aboutCarousel/1.jpg"/>
+                                    <p class="absolute right-0 bottom-0 text-slate-50 text-xl font-mono mr-2 font-semibold">Liam's Angry Cat</p>
                                 </div>
                                 <div class="flex-100 min-w-0 relative">
-                                    <img class="block w-full h-full object-cover" src="../src/images/aboutCarousel/2.jpg"/>
+                                    <img class="block w-full h-full object-cover absolute" src="../src/images/aboutCarousel/2.jpg"/>
+                                    <p class="absolute right-0 bottom-0 text-slate-50 text-xl font-mono mr-2 font-semibold">Leo's Dog(s)</p>
                                 </div>
                                 <div class="flex-100 min-w-0 relative">
                                     <img class="block w-full h-full object-cover" src="../src/images/aboutCarousel/3.jpg"/>
+                                    <p class="absolute right-0 bottom-0 text-slate-50 text-xl font-mono mr-2 font-semibold">Lazy and Fat Dog</p>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="embla__dots flex place-content-center z-10 w-full -translate-y-[100%]"></div>
+                        <div class="flex h-full w-6 left-0 absolute justify-center flex-col ml-2">
+                            <button class="embla__button--prev w-full" type="button">
+                                <svg class="fill-main-light/70 hover:fill-main-light transition-all duration-300 active:opacity-5" viewBox="0 0 532 532">
+                                <path d="M355.66 11.354c13.793-13.805 36.208-13.805 50.001 0 13.785 13.804 13.785 36.238 0 50.034L201.22 266l204.442 204.61c13.785 13.805 13.785 36.239 0 50.044-13.793 13.796-36.208 13.796-50.002 0a5994246.277 5994246.277 0 0 0-229.332-229.454 35.065 35.065 0 0 1-10.326-25.126c0-9.2 3.393-18.26 10.326-25.2C172.192 194.973 332.731 34.31 355.66 11.354Z"></path>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div class="flex h-full w-6 right-0 absolute justify-center flex-col mr-2">
+                            <button class="embla__button--next w-full" type="button">
+                                <svg class="fill-main-light/70 hover:fill-main-light transition-all duration-300 active:opacity-5" viewBox="0 0 532 532">
+                                <path d="M176.34 520.646c-13.793 13.805-36.208 13.805-50.001 0-13.785-13.804-13.785-36.238 0-50.034L330.78 266 126.34 61.391c-13.785-13.805-13.785-36.239 0-50.044 13.793-13.796 36.208-13.796 50.002 0 22.928 22.947 206.395 206.507 229.332 229.454a35.065 35.065 0 0 1 10.326 25.126c0 9.2-3.393 18.26-10.326 25.2-45.865 45.901-206.404 206.564-229.332 229.52Z"></path>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div class="embla__dots flex place-content-center z-10 absolute w-full bottom-0"></div>
                     </div>
                 </div>
             </div>
@@ -63,6 +82,43 @@
     </div>
 
     <script src="navBar.txt"></script>
+    <script>
+        const addTogglePrevNextBtnsActive = (emblaApi, prevBtn, nextBtn) => {
+            const togglePrevNextBtnsState = () => {
+                if (emblaApi.canScrollPrev()) prevBtn.removeAttribute('disabled');
+                else prevBtn.setAttribute('disabled', 'disabled');
+
+                if (emblaApi.canScrollNext()) nextBtn.removeAttribute('disabled');
+                else nextBtn.setAttribute('disabled', 'disabled');
+            };
+
+            emblaApi
+                .on('select', togglePrevNextBtnsState)
+                .on('init', togglePrevNextBtnsState)
+                .on('reInit', togglePrevNextBtnsState);
+
+            return () => {
+                prevBtn.removeAttribute('disabled');
+                nextBtn.removeAttribute('disabled');
+            };
+        };
+
+        const addPrevNextBtnsClickHandlers = (emblaApi, prevBtn, nextBtn) => {
+            const scrollPrev = () => emblaApi.scrollPrev();
+            const scrollNext = () => emblaApi.scrollNext();
+
+            prevBtn.addEventListener('click', scrollPrev, false);
+            nextBtn.addEventListener('click', scrollNext, false);
+
+            const removeTogglePrevNextBtnsActive = addTogglePrevNextBtnsActive(emblaApi, prevBtn, nextBtn);
+
+            return () => {
+                removeTogglePrevNextBtnsActive();
+                prevBtn.removeEventListener('click', scrollPrev, false);
+                nextBtn.removeEventListener('click', scrollNext, false);
+            };
+        };
+    </script>
     <script>
         const addDotBtnsAndClickHandlers = (emblaApi, dotsNode) => {
             let dotNodes = [];
@@ -94,7 +150,7 @@
                 .on('select', toggleDotBtnsActive);
 
             return () => dotsNode.innerHTML = '';
-        }
+        };
     </script>
     <script>
         document.getElementById("nav-bar").innerHTML += navBar;
@@ -109,13 +165,17 @@
         const emblaNode = document.querySelector('.embla')
         const viewportNode = emblaNode.querySelector('.embla__viewport')
         const dotsNode = document.querySelector('.embla__dots');
+        const prevBtn = emblaNode.querySelector('.embla__button--prev')
+        const nextBtn = emblaNode.querySelector('.embla__button--next')
         const options = { loop: true };
 
         const emblaApi = EmblaCarousel(viewportNode, options);
 
         const removeDotBtnsAndClickHandlers = addDotBtnsAndClickHandlers(emblaApi, dotsNode);
+        const removePrevNextBtnsClickHandlers = addPrevNextBtnsClickHandlers(emblaApi, prevBtn, nextBtn);
 
         emblaApi.on('destroy', removeDotBtnsAndClickHandlers);
+        emblaApi.on('destroy', removePrevNextBtnsClickHandlers);
     </script>
 </body>
 </html>
