fix minor spacing

--- a/src/about.html
+++ b/src/about.html
@@ -190,12 +190,12 @@
             <div class="h-nav"></div>
 
             <div class="flex w-screen justify-center items-center relative">
-                <div class="absolute flex w-screen items-center justify-center">
+                <div class="absolute bg-gradient-to-r from-main-light/0 via-main-dark/80 to-main-light/0 h-20" style="width: calc(100vw - 14rem)"></div>
+                <div class="flex w-screen items-center justify-center">
                     <p class="text-stone-200 font-mono tracking-widest text-6xl truncate z-20 text-right">AABHAS</p>
                     <img src="../src/images/headshots/aabhas.jpg" class="z-20 h-48 w-48 rounded-full m-4 outline outline-offset-4 outline-2 outline-main-dark">
                     <p class="text-stone-200 font-mono tracking-widest text-6xl truncate z-20 text-left">LAST_NAME</p>
                 </div>
-                <div class="bg-gradient-to-r from-main-light/0 via-main-dark/80 to-main-light/0 h-20" style="width: calc(100vw - 14rem)"></div>
             </div>
 
             <div class="h-nav"></div>
